--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css">
   </head>
   <body ng-init="cameras = [{id: 1,name: 'Nikon D3100 DSLR',image: 'http://ecx.images-amazon.com/images/I/713u2gDQqML._SX522_.jpg',rating: 4,price: 369.99,onSale: true},{id: 2,name: 'Canon EOS 70D',image: 'http://ecx.images-amazon.com/images/I/81U00AkAUWL._SX522_.jpg',rating: 2,price: 1099.0,onSale: false},{id: 3,name: 'Nikon D810A',image:'http://ecx.images-amazon.com/images/I/91wtXIfLl2L._SX522_.jpg',rating: 3,price: 3796.95,onSale: true}]">
+
     <div class="container">
       <header>
         <h1>Camera Shop</h1>
       </header>
       <main>
         <div class="row">
+
           <div class="col s12 m8">
             <div class="row">
-
               <div class="col s8 input-field">
                 <input type="text" ng-model="searchBar" placeholder="Search here">
               </div>
@@ -25,23 +26,29 @@
                   <option value="rating">Rating</option>
                 </select>
               </div>
-
             </div>
           </div>
-          <div class="col s12 m4">
-            <div class="card blue-grey">
-              <div class="card-content white-text">
-                <span class="card-title">Your Cart</span>
-              </div>
-              <div class="card-action">
-                <a href="#">Checkout</a>
+
+          <div ng-controller="CartController as cart">
+            <ul ng-repeat="item in cart.items track by $index">
+              <li>{{item.name}}</li>
+            </ul>
+
+            <div class="col s12 m4">
+              <div class="card blue-grey">
+                <div class="card-content white-text">
+                  <span class="card-title">Your Cart</span>
+                </div>
+                <div class="card-action">
+                  <div ng-controller="ProductController">
+                    <p> {{ shoppingCart }} </p>
+                  </div>
+                  <a href="#">Checkout</a>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
 
-        <div class="row">
-          <div>
+
             <div ng-repeat="camera in cameras | filter : searchBar | orderBy: selected">
                 <h4>{{ camera.name }}</h4>
                 <p>Rating: {{ camera.rating | makeStars }}</p>
@@ -49,9 +56,10 @@
                 <p ng-show='camera.onSale === true'>On Sale!</p>
                 <p ng-show='camera.onSale === false'></p>
                 <img ng-src="{{ camera.image }}"></img>
-                <div><button type="submit" class="btn waves-effect waves-light " id=" {{ camera.id}} ">ADD TO CART</button></div></br></br></br>
+                <div><button ng-click="cart.addItem(camera)" class="btn waves-effect waves-light">ADD TO CART</button></div></br></br></br>
             </div>
           </div>
+
         </div>
 
       </main>
