--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <main>
         <div class="row">
 
+
           <div class="col s12 m8">
             <div class="row">
               <div class="col s8 input-field">
@@ -29,10 +30,7 @@
             </div>
           </div>
 
-          <div ng-controller="CartController as cart">
-            <ul ng-repeat="item in cart.items track by $index">
-              <li>{{item.name}}</li>
-            </ul>
+
 
             <div class="col s12 m4">
               <div class="card blue-grey">
@@ -41,13 +39,18 @@
                 </div>
                 <div class="card-action">
                   <div ng-controller="ProductController">
-                    <p> {{ shoppingCart }} </p>
+                    <ul>
+                      <li> {{ shoppingCart }}  {{price}} </li>
+                    </ul>
                   </div>
                   <a href="#">Checkout</a>
                 </div>
               </div>
             </div>
 
+            <div ng-controller="CartController as cart">
+              <ul ng-repeat="item in cart.items track by $index">
+              </ul>
 
             <div ng-repeat="camera in cameras | filter : searchBar | orderBy: selected">
                 <h4>{{ camera.name }}</h4>
@@ -61,7 +64,6 @@
           </div>
 
         </div>
-
       </main>
     </div>
     <script src="js/jquery-2.1.4.min.js"></script>
